--- a/015 - Game/index.html
+++ b/015 - Game/index.html
@@ -9,6 +9,11 @@
 <body>
     <canvas id="canvas1"></canvas>
     <img src="player.png" id="player">
+    <img src="layer-1.png" alt="" id="layer1">
+    <img src="layer-2.png" alt="" id="layer2">
+    <img src="layer-3.png" alt="" id="layer3">
+    <img src="layer-4.png" alt="" id="layer4">
+    <img src="layer-5.png" alt="" id="layer5">
     <script type="module" src="main.js"></script>
 </body>
 </html>
