--- a/015 - Game/index.html
+++ b/015 - Game/index.html
@@ -14,6 +14,9 @@
     <img src="layer-3.png" alt="" id="layer3">
     <img src="layer-4.png" alt="" id="layer4">
     <img src="layer-5.png" alt="" id="layer5">
+    <img src="enemy_fly.png" alt="" id="enemy_fly">
+    <img src="enemy_plant.png" alt="" id="enemy_plant">
+    <img src="enemy_spider_big.png" alt="" id="enemy_spider_big">
     <script type="module" src="main.js"></script>
 </body>
 </html>
