--- a/015 - Game/index.html
+++ b/015 - Game/index.html
@@ -17,6 +17,7 @@
     <img src="enemy_fly.png" alt="" id="enemy_fly">
     <img src="enemy_plant.png" alt="" id="enemy_plant">
     <img src="enemy_spider_big.png" alt="" id="enemy_spider_big">
+    <img src="fire.png" alt="" id="fire">
     <script type="module" src="main.js"></script>
 </body>
 </html>
