--- a/015 - Game/index.html
+++ b/015 - Game/index.html
@@ -18,6 +18,7 @@
     <img src="enemy_plant.png" alt="" id="enemy_plant">
     <img src="enemy_spider_big.png" alt="" id="enemy_spider_big">
     <img src="fire.png" alt="" id="fire">
+    <img src="boom.png" alt="" id="collisionAnimation">
     <script type="module" src="main.js"></script>
 </body>
 </html>
