--- a/015 - Game/index.html
+++ b/015 - Game/index.html
@@ -9,16 +9,22 @@
 <body>
     <canvas id="canvas1"></canvas>
     <img src="player.png" id="player">
-    <img src="layer-1.png" alt="" id="layer1">
+    <!-- <img src="layer-1.png" alt="" id="layer1">
     <img src="layer-2.png" alt="" id="layer2">
     <img src="layer-3.png" alt="" id="layer3">
     <img src="layer-4.png" alt="" id="layer4">
-    <img src="layer-5.png" alt="" id="layer5">
+    <img src="layer-5.png" alt="" id="layer5"> -->
     <img src="enemy_fly.png" alt="" id="enemy_fly">
     <img src="enemy_plant.png" alt="" id="enemy_plant">
     <img src="enemy_spider_big.png" alt="" id="enemy_spider_big">
     <img src="fire.png" alt="" id="fire">
     <img src="boom.png" alt="" id="collisionAnimation">
+    <img src="forest-1.png" alt="" id="layer1">
+    <img src="forest-2.png" alt="" id="layer2">
+    <img src="forest-3.png" alt="" id="layer3">
+    <img src="forest-4.png" alt="" id="layer4">
+    <img src="forest-5.png" alt="" id="layer5">
+    <img src="lives.png" alt="" id="lives">
     <script type="module" src="main.js"></script>
 </body>
 </html>
