Steam Punk Game 3

--- a/016 - Steam Punk Game/index.html
+++ b/016 - Steam Punk Game/index.html
@@ -8,6 +8,18 @@
 </head>
 <body>
     <canvas id="canvas1"></canvas>
+
+    <!-- characters -->
+    <img src="images/player.png" alt="" id="player">
+
+    <!-- props -->
+
+    <!-- environment -->
+    <img src="images/layer1.png" id="layer1">
+    <img src="images/layer2.png" id="layer2">
+    <img src="images/layer3.png" id="layer3">
+    <img src="images/layer4.png" id="layer4">
+    
     <script src="script.js"></script>
 </body>
 </html>
