Steam Punk Game 4

--- a/016 - Steam Punk Game/index.html
+++ b/016 - Steam Punk Game/index.html
@@ -10,7 +10,10 @@
     <canvas id="canvas1"></canvas>
 
     <!-- characters -->
-    <img src="images/player.png" alt="" id="player">
+    <img src="images/player.png" id="player">
+    <img src="images/angler1.png" id="angler1">
+    <img src="images/angler2.png" id="angler2">
+    <img src="images/lucky.png" id="lucky">
 
     <!-- props -->
 
@@ -19,7 +22,7 @@
     <img src="images/layer2.png" id="layer2">
     <img src="images/layer3.png" id="layer3">
     <img src="images/layer4.png" id="layer4">
-    
+
     <script src="script.js"></script>
 </body>
 </html>
