Steam Punk Game 5

--- a/016 - Steam Punk Game/index.html
+++ b/016 - Steam Punk Game/index.html
@@ -14,9 +14,11 @@
     <img src="images/angler1.png" id="angler1">
     <img src="images/angler2.png" id="angler2">
     <img src="images/lucky.png" id="lucky">
+    <img src="images/hivewhale.png" id="hivewhale">
 
     <!-- props -->
-
+    <img src="images/projectile.png" id="projectile">
+    <img src="images/gears.png" id="gears">
     <!-- environment -->
     <img src="images/layer1.png" id="layer1">
     <img src="images/layer2.png" id="layer2">
