--- a/016 - Steam Punk Game/index.html
+++ b/016 - Steam Punk Game/index.html
@@ -15,10 +15,14 @@
     <img src="images/angler2.png" id="angler2">
     <img src="images/lucky.png" id="lucky">
     <img src="images/hivewhale.png" id="hivewhale">
+    <img src="images/drone.png" id="drone">
 
     <!-- props -->
     <img src="images/projectile.png" id="projectile">
     <img src="images/gears.png" id="gears">
+    <img src="images/smokeExplosion.png" id="smokeExplosion">
+    <img src="images/fireExplosion.png" id="fireExplosion">
+    
     <!-- environment -->
     <img src="images/layer1.png" id="layer1">
     <img src="images/layer2.png" id="layer2">
