Forest Creatures Game 1

--- a/018 - Forest Creatures Game/index.html
+++ b/018 - Forest Creatures Game/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="wrapper">
+    <div id="wrapper">
         <canvas id="canvas1"></canvas>
         <img src="overlay.png" alt="overlay" id="overlay">
         <img src="leaves_left.png" alt="leaves_left" id="leaves_left">
         <img src="leaves_right.png" alt="leaves_right" id="leaves_right">
     </div>
+    <img src="owlbear.png" alt="owlbear" id="owlbear">
     <script src="script.js"></script>
 </body>
 </html>
