Forest Creatures Game 2

--- a/018 - Forest Creatures Game/index.html
+++ b/018 - Forest Creatures Game/index.html
@@ -14,6 +14,9 @@
         <img src="leaves_right.png" alt="leaves_right" id="leaves_right">
     </div>
     <img src="owlbear.png" alt="owlbear" id="owlbear">
+    <img src="bush.png" alt="bush" id="bush">
+    <img src="plant.png" alt="plant" id="plant">
+    <img src="grass.png" alt="grass" id="grass">
     <script src="script.js"></script>
 </body>
 </html>
