--- a/019 - Bullseye Game/index.html
+++ b/019 - Bullseye Game/index.html
@@ -9,6 +9,7 @@
 <body>
     <canvas id="canvas1"></canvas>
     <img src="overlay.png" id="overlay">
+    <img src="obstacles.png" alt="" id="obstacles">
     <script src="script.js"></script>
 </body>
 </html>
