--- a/019 - Bullseye Game/index.html
+++ b/019 - Bullseye Game/index.html
@@ -9,7 +9,8 @@
 <body>
     <canvas id="canvas1"></canvas>
     <img src="overlay.png" id="overlay">
-    <img src="obstacles.png" alt="" id="obstacles">
+    <img src="obstacles.png" id="obstacles">
+    <img src="bull.png" id="bull">
     <script src="script.js"></script>
 </body>
 </html>
