--- a/019 - Bullseye Game/index.html
+++ b/019 - Bullseye Game/index.html
@@ -11,6 +11,8 @@
     <img src="overlay.png" id="overlay">
     <img src="obstacles.png" id="obstacles">
     <img src="bull.png" id="bull">
+    <img src="egg.png" id="egg">
+    <img src="toad.png" id="toad">
     <script src="script.js"></script>
 </body>
 </html>
