--- a/019 - Bullseye Game/index.html
+++ b/019 - Bullseye Game/index.html
@@ -13,6 +13,7 @@
     <img src="bull.png" id="bull">
     <img src="egg.png" id="egg">
     <img src="toad.png" id="toad">
+    <img src="larva.png" id="larva">
     <script src="script.js"></script>
 </body>
 </html>
