--- a/019 - Bullseye Game/index.html
+++ b/019 - Bullseye Game/index.html
@@ -14,6 +14,7 @@
     <img src="egg.png" id="egg">
     <img src="toad.png" id="toad">
     <img src="larva.png" id="larva">
+    <img src="toads.png" id="toads">
     <script src="script.js"></script>
 </body>
 </html>
