Object Pool / Performance Optimization 3

--- a/020 - Asteroid Game/index.html
+++ b/020 - Asteroid Game/index.html
@@ -9,6 +9,7 @@
 <body>
     <canvas id="canvas1"></canvas>
     <img src="asteroid.png" id="asteroid" alt="asteroid">
+    <img src="explosions.png" alt="explosions" id="explosions">
     <script src="script.js"></script>
 </body>
 </html>
