Object Pool / Performance Optimization 4

--- a/020 - Asteroid Game/index.html
+++ b/020 - Asteroid Game/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Object Pool / Performance Optimization</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <canvas id="canvas1"></canvas>
-    <img src="asteroid.png" id="asteroid" alt="asteroid">
-    <img src="explosions.png" alt="explosions" id="explosions">
+    <img src="asteroid.png" id="asteroid" alt="asteroid" />
+    <img src="explosions.png" alt="explosions" id="explosions" />
+    <audio src="explosion1.wav" id="explosion1"></audio>
+    <audio src="explosion2.wav" id="explosion2"></audio>
+    <audio src="explosion3.wav" id="explosion3"></audio>
+    <audio src="explosion4.wav" id="explosion4"></audio>
+    <audio src="explosion5.wav" id="explosion5"></audio>
+    <audio src="explosion6.wav" id="explosion6"></audio>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
