--- a/021 - Rotating Robots/index.html
+++ b/021 - Rotating Robots/index.html
@@ -11,7 +11,9 @@
     <img src="body.png" alt="body" id="body" />
     <img src="eye1.png" alt="eye1" id="eye1" />
     <img src="eye2.png" alt="eye2" id="eye2" />
-    <img src="reflection.png" alt="reflection" id="reflection" />
+    <img src="bodySprite.png" alt="bodySprite" id="bodySprite">
+    <img src="reflection.png" alt="reflection" id="reflectionImage" />
+    <img src="detectorLight.png" alt="detectorLight" id="detectorLight">
     <script src="script.js"></script>
   </body>
 </html>
