--- a/022 - Space Invaders/index.html
+++ b/022 - Space Invaders/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <canvas id="canvas1"></canvas>
+    <img src="beetlemorph.png" alt="beetlemorph" id="beetlemorph">
     <script src="script.js"></script>
 </body>
 </html>
