--- a/022 - Space Invaders/index.html
+++ b/022 - Space Invaders/index.html
@@ -9,6 +9,9 @@
 <body>
     <canvas id="canvas1"></canvas>
     <img src="beetlemorph.png" alt="beetlemorph" id="beetlemorph">
+    <img src="rhinomorph.png" alt="rhinomorph" id="rhinomorph">
+    <img src="player.png" alt="player" id="player">
+    <img src="player_jets.png" alt="player_jets" id="player_jets">
     <script src="script.js"></script>
 </body>
 </html>
