--- a/022 - Space Invaders/index.html
+++ b/022 - Space Invaders/index.html
@@ -12,6 +12,7 @@
     <img src="rhinomorph.png" alt="rhinomorph" id="rhinomorph">
     <img src="player.png" alt="player" id="player">
     <img src="player_jets.png" alt="player_jets" id="player_jets">
+    <img src="boss.png" alt="boss" id="boss">
     <script src="script.js"></script>
 </body>
 </html>
