--- a/023 - Planet Defense/index.html
+++ b/023 - Planet Defense/index.html
@@ -10,6 +10,7 @@
     <canvas id="canvas1"></canvas>
     <img src="planet.png" alt="planet" id="planet">
     <img src="player.png" alt="player" id="player">
+    <img src="asteroid.png" alt="asteroid" id="asteroid">
     <script src="script.js"></script>
 </body>
 </html>
