--- a/023 - Planet Defense/index.html
+++ b/023 - Planet Defense/index.html
@@ -11,6 +11,9 @@
     <img src="planet.png" alt="planet" id="planet">
     <img src="player.png" alt="player" id="player">
     <img src="asteroid.png" alt="asteroid" id="asteroid">
+    <img src="lobstermorph.png" alt="lobstermorph" id="lobstermorph">
+    <img src="beetlemorph.png" alt="beetlemorph" id="beetlemorph">
+    <img src="rhinomorph.png" alt="rhinomorph" id="rhinomorph">
     <script src="script.js"></script>
 </body>
 </html>
