--- a/025 - Space Shooter/index.html
+++ b/025 - Space Shooter/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alien States</title>
+    <title>Space Shooter</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <canvas id="canvas1"></canvas>
-    <p id="info"></p>
-    <img src="background.png" alt="background" id="background">
-    <img src="locustmorph_large.png" alt="locustmorph_large" id="locustmorph_large">
-    <script src="script.js" defer></script>
+    <div class="controls">
+        <button id="fullScreenButton">F</button>
+        <button id="resetButton">R</button>
+    </div>
+    <script src="main.js"></script>
 </body>
 </html>
