--- a/025 - Space Shooter/index.html
+++ b/025 - Space Shooter/index.html
@@ -12,6 +12,7 @@
         <button id="fullScreenButton">F</button>
         <button id="resetButton">R</button>
     </div>
+    <script src="enemy.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
