--- a/025 - Space Shooter/index.html
+++ b/025 - Space Shooter/index.html
@@ -12,6 +12,12 @@
         <button id="fullScreenButton">F</button>
         <button id="resetButton">R</button>
     </div>
+    <div class="assets">
+        <img src="crew.png" id="crewImage">
+        <img src="phantommorph100x100.png" id="phantommorph">
+        <img src="lobstermorph100x100.png" id="lobstermorph">
+        <img src="beetlemorph100x100.png" id="beetlemorph">
+    </div>
     <script src="enemy.js"></script>
     <script src="main.js"></script>
 </body>
