--- a/025 - Space Shooter/index.html
+++ b/025 - Space Shooter/index.html
@@ -14,6 +14,7 @@
     </div>
     <div class="assets">
         <img src="crew.png" id="crewImage">
+        <img src="crewSprite.png" id="crewSprite">
         <img src="phantommorph100x100.png" id="phantommorph">
         <img src="lobstermorph100x100.png" id="lobstermorph">
         <img src="beetlemorph100x100.png" id="beetlemorph">
