--- a/025 - Space Shooter/index.html
+++ b/025 - Space Shooter/index.html
@@ -18,6 +18,16 @@
         <img src="phantommorph100x100.png" id="phantommorph">
         <img src="lobstermorph100x100.png" id="lobstermorph">
         <img src="beetlemorph100x100.png" id="beetlemorph">
+
+        <audio src="newgame.mp3" id="newgame"></audio>
+        <audio src="boom1.mp3" id="boom1"></audio>
+        <audio src="boom2.mp3" id="boom2"></audio>
+        <audio src="boom3.mp3" id="boom3"></audio>
+        <audio src="boom4.mp3" id="boom4"></audio>
+        <audio src="slide.mp3" id="slide"></audio>
+        <audio src="win.mp3" id="win"></audio>
+        <audio src="lose.mp3" id="lose"></audio>
+        <audio src="scream.mp3" id="scream"></audio>
     </div>
     <script src="enemy.js"></script>
     <script src="main.js"></script>
