Steampunk Flappy Bird 2

--- a/026 - Steampunk Flappy Bird/index.html
+++ b/026 - Steampunk Flappy Bird/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <canvas id="canvas1"></canvas>
+    <div class="assets">
+        <img src="background_single.png" id="background">
+    </div>
+    <script src="background.js"></script>
     <script src="player.js"></script>
     <script src="main.js"></script>
 </body>
