Steampunk Flappy Bird 3

--- a/026 - Steampunk Flappy Bird/index.html
+++ b/026 - Steampunk Flappy Bird/index.html
@@ -11,6 +11,7 @@
     <div class="assets">
         <img src="background_single.png" id="background">
     </div>
+    <script src="obstacles.js"></script>
     <script src="background.js"></script>
     <script src="player.js"></script>
     <script src="main.js"></script>
