Steampunk Flappy Bird 4

--- a/026 - Steampunk Flappy Bird/index.html
+++ b/026 - Steampunk Flappy Bird/index.html
@@ -8,8 +8,15 @@
 </head>
 <body>
     <canvas id="canvas1"></canvas>
+    <div class="controls">
+        <button id="restartButton">R</button>
+        <button id="fullScreenButton">F</button>
+        <button id="debugButton">D</button>
+    </div>
     <div class="assets">
         <img src="background_single.png" id="background">
+        <img src="player_fish.png" id="player_fish">
+        <img src="smallGears.png" id="smallGears">
     </div>
     <script src="obstacles.js"></script>
     <script src="background.js"></script>
