Steampunk Flappy Bird 5

--- a/026 - Steampunk Flappy Bird/index.html
+++ b/026 - Steampunk Flappy Bird/index.html
@@ -17,10 +17,19 @@
         <img src="background_single.png" id="background">
         <img src="player_fish.png" id="player_fish">
         <img src="smallGears.png" id="smallGears">
+        <audio src="charge.mp3" id="charge"></audio>
+        <audio src="flap1.mp3" id="flap1"></audio>
+        <audio src="flap2.mp3" id="flap2"></audio>
+        <audio src="flap3.mp3" id="flap3"></audio>
+        <audio src="flap4.mp3" id="flap4"></audio>
+        <audio src="flap5.mp3" id="flap5"></audio>
+        <audio src="win.mp3" id="win"></audio>
+        <audio src="lose.mp3" id="lose"></audio>
     </div>
-    <script src="obstacles.js"></script>
+    <script src="audio.js"></script>
     <script src="background.js"></script>
     <script src="player.js"></script>
+    <script src="obstacles.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
