Battle Snakes Arena 5

--- a/027 - Battle Snakes Arena/index.html
+++ b/027 - Battle Snakes Arena/index.html
@@ -9,6 +9,8 @@
   <body>
     <canvas id="canvas1"></canvas>
 
+    <div id="gameOverScreen"></div>
+
     <div id="controls">
       <div id="buttons">
         <button id="startButton">Start</button>
@@ -36,19 +38,19 @@
             </select>
             <div>
               <label for="player1name">Name: </label>
-              <input type="text" id="player1name" />
+              <input type="text" id="player1name" value="P1" />
             </div>
           </div>
           <div class="player2">
             <p class="playerLabel">Player 2</p>
             <label for="player2controls">Controls:</label>
             <select name="player2controls" id="player2controls">
-              <option value="arrows">Keyboard WSAD</option>
+              <option value="wsad">Keyboard WSAD</option>
               <option value="ai">Computer AI</option>
             </select>
             <div>
               <label for="player2name">Name: </label>
-              <input type="text" id="player2name" />
+              <input type="text" id="player2name" value="P2" />
             </div>
           </div>
           <div class="player3">
@@ -59,7 +61,7 @@
             </select>
             <div>
               <label for="player3name">Name: </label>
-              <input type="text" id="player3name" />
+              <input type="text" id="player3name" value="P3" />
             </div>
           </div>
           <div class="player4">
@@ -70,7 +72,7 @@
             </select>
             <div>
               <label for="player4name">Name: </label>
-              <input type="text" id="player4name" />
+              <input type="text" id="player4name" value="P4" />
             </div>
           </div>
         </div>
