Battle Snakes Arena 6

--- a/027 - Battle Snakes Arena/index.html
+++ b/027 - Battle Snakes Arena/index.html
@@ -45,8 +45,8 @@
             <p class="playerLabel">Player 2</p>
             <label for="player2controls">Controls:</label>
             <select name="player2controls" id="player2controls">
-              <option value="wsad">Keyboard WSAD</option>
               <option value="ai">Computer AI</option>
+              <option value="wsad">Keyboard WSAD</option>
             </select>
             <div>
               <label for="player2name">Name: </label>
@@ -80,7 +80,10 @@
     </div>
 
     <div class="assets">
-      <img src="assets/forest_margin_repeat.png" id="forest_margin_repeat" />
+      <!-- <img src="assets/forest_margin_repeat.png" id="forest_margin_repeat" /> -->
+      <img src="assets/forest_margin_repeat_1600x600.png" id="forest_margin_repeat" />
+      <img src="assets/magic_berry1.png" id="magic_berry1">
+      <img src="assets/snake_corgi.png" alt="" id="snake_corgi">
     </div>
 
     <script src="background.js"></script>
