Battle Snakes Arena 7

--- a/027 - Battle Snakes Arena/index.html
+++ b/027 - Battle Snakes Arena/index.html
@@ -28,6 +28,8 @@
         </div>
       </div>
       <div id="gameMenu">
+        <div id="message1">Welcome to the battle arena!</div>
+        <div id="message2">Choose your fighters!</div>
         <div id="playerChoice">
           <div class="player1">
             <p class="playerLabel">Player 1</p>
@@ -50,7 +52,7 @@
             </select>
             <div>
               <label for="player2name">Name: </label>
-              <input type="text" id="player2name" value="P2" />
+              <input type="text" id="player2name" value="Danger Noodle" />
             </div>
           </div>
           <div class="player3">
@@ -61,7 +63,7 @@
             </select>
             <div>
               <label for="player3name">Name: </label>
-              <input type="text" id="player3name" value="P3" />
+              <input type="text" id="player3name" value="Ekans" />
             </div>
           </div>
           <div class="player4">
@@ -72,7 +74,7 @@
             </select>
             <div>
               <label for="player4name">Name: </label>
-              <input type="text" id="player4name" value="P4" />
+              <input type="text" id="player4name" value="Nagini" />
             </div>
           </div>
         </div>
@@ -82,8 +84,10 @@
     <div class="assets">
       <!-- <img src="assets/forest_margin_repeat.png" id="forest_margin_repeat" /> -->
       <img src="assets/forest_margin_repeat_1600x600.png" id="forest_margin_repeat" />
-      <img src="assets/magic_berry1.png" id="magic_berry1">
+      <!-- <img src="assets/magic_berry1.png" id="magic_berry1"> -->
       <img src="assets/snake_corgi.png" alt="" id="snake_corgi">
+      <img src="assets/mushroom_sprite.png" id="mushroom_sprite">
+      <img src="assets/void_wolf.png" id="void_wolf">
     </div>
 
     <script src="background.js"></script>
