Grid Based Games 2

--- a/028 - Grid Based/index.html
+++ b/028 - Grid Based/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <canvas id="canvas1"></canvas>
+
+    <div class="assets">
+        <img src="magic_berry.png" id="magic_berry">
+        <img src="snake_zilla.png" id="snake_zilla">
+    </div>
+
     <script src="constants.js"></script>
     <script src="food.js"></script>
     <script src="snake.js"></script>
