RPG Pixel Art Game 2

--- a/030 - RPG Maker/index.html
+++ b/030 - RPG Maker/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RPG Pixel Art Game</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <canvas id="canvas1"></canvas>
+    
+    <div class="assets">
+        <img src="backgroundLevel1.png" id="backgroundLevel1" />
+        <img src="foregroundLevel1.png" id="foregroundLevel1">
+        <img src="hero1.png" id="hero1">
+    </div>
 
     <script type="module" src="main.js"></script>
-</body>
+  </body>
 </html>
