--- a/031 - Horse Racing Game/index.html
+++ b/031 - Horse Racing Game/index.html
@@ -43,7 +43,7 @@
 
         <div id="bet">
           <p>You currently have: <span id="funds">100</span></p>
-          <label for="amount">Bet Amount ($)</label>
+          <label for="amount">Bet Amount ($):</label>
           <input type="number" id="amount" value="0" />
           <label>Bet on horse:</label>
           <select id="bethorse">
@@ -52,7 +52,7 @@
             <option value="3">Green</option>
             <option value="4">Brown</option>
           </select>
-          <label>Number of lap</label>
+          <label>Number of laps:</label>
           <input type="number" id="num_lap" value="1" />
         </div>
         <img src="images/tree.png" class="tree" />
