Bullet Race Game 3

--- a/032 - Bullet Race Game/index.html
+++ b/032 - Bullet Race Game/index.html
@@ -14,6 +14,7 @@
       <span style="color: lightgreen">Press 'start' to begin.</span>
       <br />
       <button id="toggle">Start</button>
+      <div style="color: white; font-size: 20px; margin: 10px 0">Score: <span id="score">0</span></div>
     </div>
     <div class="wrapper">
       <div class="container" id="container">
