Atari Centipede Clone 2

--- a/037 - Atari Centipede Game/index.html
+++ b/037 - Atari Centipede Game/index.html
@@ -10,7 +10,7 @@
     <div class="wrap">
         <canvas id="game" width="800" height="600"></canvas>
       <div class="controls">
-        Move: &leftarrow; &rightarrow; or A/D (classic left/right only) - Shoot: Space - Restart: R - Pause: P
+        Move: <span>&leftarrow;&rightarrow;</span> or A/D (classic left/right only) - Shoot: Space - Restart: R - Pause: P
       </div>
       <div style="margin-top: 8px">
         <button id="startBtn">Start / Restart</button>
