--- a/038 - Atari Breakout Game/index.html
+++ b/038 - Atari Breakout Game/index.html
@@ -14,7 +14,7 @@
     <img src="assets/information.png" id="infoButton" width="32" height="32" onclick="showInfo()" />
 
     <div id="canvasDiv">
-      <button id="startButton" onclick="startGame">START</button>
+      <button id="startButton" onclick="startGame()">START</button>
       <canvas id="gameScreen" width="800" height="400"></canvas>
 
       <div id="canvasTextScreen">
@@ -31,7 +31,7 @@
       <div id="instructions">
         <p class="infoTitle" style="font-size: 2rem; left: 0; top: 0">Game Instructions</p>
         <br />
-        <span>Use your mouse or arrow keys to play.</span>
+        <span>Use your mouse or arrow keys to play. Press 'Space' key to pause.</span>
         <br />
         <span>Bounce the ball until you destroy all the blocks without letting it fall.</span>
       </div>
