Pig Dice Game 2

--- a/039 - Pig Dice Game/index.html
+++ b/039 - Pig Dice Game/index.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Pig Dice Game</h1>
+    <h1>
+      Pig Dice Game
+      <div class="info">
+        <span>&quest;</span>
+
+        <ul>
+          <li>First player that reaches 50 points win.</li>
+        </ul>
+      </div>
+    </h1>
+
     <main>
       <section class="player player-0 player-active">
         <h2 class="name" id="name-0">Player 1</h2>
@@ -27,7 +37,7 @@
         </div>
       </section>
 
-      <img src="dice-5.png" alt="Playing dice" class="dic" />
+      <img src="dice-5.png" alt="Playing dice" class="dice" />
       <button class="btn btn-new">New Game</button>
       <button class="btn btn-roll">Roll Dice</button>
       <button class="btn btn-hold">Hold</button>
