Circus Tightrope Game 2

--- a/040 - Circus Tightrope Game/index.html
+++ b/040 - Circus Tightrope Game/index.html
@@ -11,6 +11,7 @@
       <div id="startScreen">
         <h1>Circus Tightrope</h1>
         <p>Balance on the tightrope, jump over flames, and survive as long as you can!</p>
+        <p>Use Left/Right keys to balance, Space to jump.</p>
         <button id="startButton">Start Game</button>
       </div>
 
