Cat vs Dog Chase 2

--- a/041 - Cat vs Dog Chase/index.html
+++ b/041 - Cat vs Dog Chase/index.html
@@ -16,5 +16,6 @@
       <button id="resetBtn">Restart</button>
     </div>
     <div id="itemIndicator"></div>
+    <script src="script.js"></script>
   </body>
 </html>
